After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 607556 - DVD menu stops for a while after seek
DVD menu stops for a while after seek
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Movie player
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2010-01-20 14:29 UTC by Sergey Grigoryev
Modified: 2010-04-08 12:42 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sergey Grigoryev 2010-01-20 14:29:24 UTC
System:
    ii  totem                                2.28.5-1

ii  gstreamer-tools                      0.10.25-4+b1                  Tools for use with GStreamer
ii  gstreamer0.10-alsa                   0.10.25-7                     GStreamer plugin for ALSA
ii  gstreamer0.10-ffmpeg                 0.10.9-3                      FFmpeg plugin for GStreamer
ii  gstreamer0.10-gnonlin                0.10.13-1                     non-linear editing module for GStreamer
ii  gstreamer0.10-plugins-bad            0.10.17-1                     GStreamer plugins from the "bad" set
ii  gstreamer0.10-plugins-base           0.10.25-7                     GStreamer plugins from the "base" set
ii  gstreamer0.10-plugins-base-apps      0.10.25-7                     GStreamer helper programs from the "base" se
ii  gstreamer0.10-plugins-good           0.10.17-1                     GStreamer plugins from the "good" set
ii  gstreamer0.10-plugins-ugly           0.10.13-2                     GStreamer plugins from the "ugly" set
ii  gstreamer0.10-tools                  0.10.25-4+b1                  Tools for use with GStreamer
ii  gstreamer0.10-x                      0.10.25-7                     GStreamer plugins for X11 and Pango
ii  libgstreamer-plugins-base0.10-0      0.10.25-7                     GStreamer libraries from the "base" set
ii  libgstreamer0.10-0                   0.10.25-4+b1                  Core GStreamer libraries and elements
ii  python-gst0.10                       0.10.12-1.1                   generic media-playing framework (Python bind
ii  totem-gstreamer                      2.28.5-1                      A simple media player for the GNOME desktop


Steps to reproduce:

   1. Start playing DVD with totem( like "totem dvd://");
   2. Make sure that dvd menu is playing(I used DVDs with continous menus);
   3. Click to the progress bar(like performing seek).

Result:

  expected: seek is performed(I tried Matrix 2: reloaded DVD. It has small video fragments between "main menu" and "scene menu" and I tried to skip it.)

  actual: I can see the frame of the place where the seek was performed for a rather long time. It looks like the time is equal to the time of playback till this frame from current position of menu.

If I have left some information - ready to add.

/segr
Comment 1 Bastien Nocera 2010-04-08 12:42:49 UTC
commit 4f6595a6f421c256c54210187ce5f0aa597072e5
Author: Bastien Nocera <hadess@hadess.net>
Date:   Thu Apr 8 13:41:07 2010 +0100

    Disable seeking in DVD menus

    If we enabled seeking in menus, either we'd miss
    navigation events, or we'd need to parse the MPEG stream
    anyway. So just disable DVD menus right now.

    https://bugzilla.gnome.org/show_bug.cgi?id=607556