Disable seeking in DVD menus

If we enabled seeking in menus, either we'd miss
navigation events, or we'd need to parse the MPEG stream
anyway. So just disable DVD menus right now.

https://bugzilla.gnome.org/show_bug.cgi?id=607556